# lightcode

./: .tmux  CHANGELOG.md  DEVELOPING.md  ROUND_ROBIN_SELECTION.md  build-fast.sh
.github/workflows/: core-kotlin-tests.yml  preview-build.yml  release.yml
code-rs/: Cargo.toml  config.md
code-rs/app-server/src/: code_message_processor.rs
code-rs/cli/: Cargo.toml
code-rs/cli/src/: main.rs  resume_cache.rs  usage.rs
code-rs/code-auto-drive-core/src/: auto_coordinator.rs  controller.rs  lib.rs
code-rs/code-core-jni/: Cargo.toml
code-rs/code-core-jni/src/: lib.rs
code-rs/code-kotlin-host/: Cargo.toml  build.rs
code-rs/code-kotlin-host/src/: classpath.rs  lib.rs
code-rs/code-kotlin-parity-tests/: Cargo.toml
code-rs/code-kotlin-parity-tests/src/: lib.rs
code-rs/code-kotlin-parity-tests/tests/: auto_drive_parity.rs
code-rs/common/src/: config_summary.rs
code-rs/core/: Cargo.toml
code-rs/core/src/: account_scheduler.rs  account_slots.rs  account_usage.rs  agent_tool.rs  apply_patch.rs  auth.rs  auth_accounts.rs  client.rs  codex.rs  config.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  exec.rs  global_usage_tracker.rs  kotlin_host.rs  landlock.rs  lib.rs  protocol.rs  seatbelt.rs  shell.rs  spawn.rs
code-rs/core/tests/: account_scheduler_tests.rs  kotlin_exec_flow.rs
code-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
code-rs/login/src/: lib.rs
code-rs/mcp-server/src/: code_tool_config.rs  code_tool_runner.rs  conversation_loop.rs  outgoing_message.rs
code-rs/protocol/: Cargo.toml
code-rs/protocol/src/: protocol.rs
code-rs/token-usage/: Cargo.toml
code-rs/token-usage/src/: main.rs
code-rs/tui/src/: account_label.rs  app.rs  app_event.rs  chatwidget.rs  glitch_animation.rs  (+3 more)
core-kotlin/: README.md  build.gradle.kts
docs/: kotlin-coordinator-roadmap.md  kotlin-migration-plan.md
docs/kotlin/: kotlin-coordinator-slice.md
scripts/: build-kotlin-engine.sh  lightcode-build-run.sh  lightcode-install.sh  lightcode-run.sh  run-core-kotlin-tests.sh  run-kotlin-engine-sandbox.sh
(+40 files in other folders)
