[package]
name = "code-core-jni"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_core_jni"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
code-app-server-protocol = { workspace = true }
code-auto-drive-core = { workspace = true }
code-core = { workspace = true }
futures = { workspace = true }
jni = "0.21"
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["serde", "v4"] }
