[package]
name = "code-kotlin-host"
version = { workspace = true }
edition = "2024"

[lib]
name = "code_kotlin_host"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
jni = { version = "0.21", features = ["invocation"] }
once_cell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
