[package]
name = "code-token-usage"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "code-token-usage"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
code-core = { path = "../core" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0" }
tracing = { version = "0.1.41", features = ["log"] }
